--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react": "7.18.3"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "@tryghost/helpers": "1.1.22",
     "@tryghost/helpers-gatsby": "1.0.25",
     "cheerio": "1.0.0-rc.3",
@@ -45,6 +47,7 @@
     "gatsby-image": "2.2.40",
     "gatsby-plugin-advanced-sitemap": "1.5.1",
     "gatsby-plugin-catch-links": "2.1.25",
+    "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-feed": "2.3.27",
     "gatsby-plugin-force-trailing-slashes": "1.0.4",
     "gatsby-plugin-manifest": "2.2.41",
@@ -57,6 +60,8 @@
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "styled-components": "^5.0.1",
+    "styled-system": "^5.1.4"
   }
 }
