--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/react-helmet": "^5.0.15",
+    "@types/styled-system": "^5.1.6",
     "babel-eslint": "10.0.3",
     "eslint": "6.8.0",
     "eslint-plugin-ghost": "1.0.0",
@@ -39,8 +41,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@styled-system/should-forward-prop": "^5.1.4",
     "@tryghost/helpers": "1.1.22",
     "@tryghost/helpers-gatsby": "1.0.25",
+    "@types/lodash": "^4.14.149",
+    "@types/styled-system__should-forward-prop": "^5.1.0",
     "cheerio": "1.0.0-rc.3",
     "gatsby": "2.19.16",
     "gatsby-awesome-pagination": "0.3.5",
@@ -54,10 +59,11 @@
     "gatsby-plugin-offline": "3.0.34",
     "gatsby-plugin-react-helmet": "3.1.22",
     "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-plugin-typescript": "^2.1.27",
     "gatsby-source-filesystem": "2.1.48",
     "gatsby-source-ghost": "4.0.3",
     "gatsby-transformer-sharp": "2.3.14",
-    "lodash": "4.17.15",
+    "lodash": "^4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
